Fri Oct  5 03:14:45 2007  Akinori MUSHA  <knu@iDaemons.org>

	* lib/ipaddr.rb (coerce_other): Support type coercion and make &,
	  |, == and include? accept a string or an integer instead of an
	  IPAddr object as the argument.

	* lib/ipaddr.rb (initialize): Give better error messages.

	* lib/ipaddr.rb: Improve documentation.

Thu Oct  4 20:45:53 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* process.c (Init_process): win32 has our own WNOHANG definition, so
	  remove unnecessary #ifdef guard.

Thu Oct  4 20:17:19 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* array.c (rb_ary_permutation, rb_ary_product): support non C99
	  compilers.

Thu Oct  4 17:33:18 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (kcode_setter): Perl-ish global variable `$=' no longer
	  effective.

	* io.c (Init_IO): remove obsolete variables: $defout, $deferr.

	* re.c (Init_Regexp): remove obsolete const alias: MatchingData.

	* time.c (Init_Time): remove obsolete Time::times.

	* re.c (ignorecase_setter): change warning message.

	* re.c (ignorecase_getter): now gives warning.

	* string.c (rb_str_cmp_m): update RDoc document.

	* re.c (kcode_setter): restore erroneously removed setter.

Thu Oct  4 16:28:33 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (rb_obj_encoding): returns encoding of the given object.

	* parse.y (reg_compile_gen): copy encoding from source string if
	  non-empty.

	* re.c (Init_Regexp): new method Regexp#encoding.

	* string.c (str_encoding): moved to encoding.c

Thu Oct  4 15:49:33 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_permutation): remove C99 dependency.
	  [ruby-dev:31934]

	* array.c (rb_ary_product): ditto.

Wed Oct  3 23:37:17 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/nkf/nkf.c, bin/ri, bin/irb: fixed typos in doc and comments.
	  a patch from Eugene Ossintsev  <eugoss AT gmail.com>.
	  [ruby-core:12375]

Wed Oct  3 17:56:22 2007  Koichi Sasada  <ko1@atdot.net>
